# dental-precheck

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.electron.json
electron/: db.ts  main.ts  preload.ts
src/: App.css  App.tsx  assessmentApi.ts  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: AdminErrorBoundary.tsx  AdminPortal.tsx  PatientAssessmentForm.tsx
src/shared/: ipc.ts  questionnaire.ts  scoring.ts  types.ts
